--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -605,6 +605,7 @@ DOMAIN-SUFFIX,jinmingxuan.com,DIRECT
 DOMAIN-SUFFIX,jinritemai.com,DIRECT
 DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
+DOMAIN-SUFFIX,jkbdw.net,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,jlpay.com,DIRECT
 DOMAIN-SUFFIX,jmj.cc,DIRECT
@@ -1093,6 +1094,7 @@ DOMAIN-SUFFIX,yangkeduo.com,DIRECT
 DOMAIN-SUFFIX,yangwangauto.com,DIRECT
 DOMAIN-SUFFIX,yaoguo.com,DIRECT
 DOMAIN-SUFFIX,yayapeiyin.com,DIRECT
+DOMAIN-SUFFIX,ybjk.com,DIRECT
 DOMAIN-SUFFIX,ybscjp.com,DIRECT
 DOMAIN-SUFFIX,ydstatic.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
