--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1095,6 +1095,7 @@ DOMAIN-SUFFIX,yangwangauto.com,DIRECT
 DOMAIN-SUFFIX,yaoguo.com,DIRECT
 DOMAIN-SUFFIX,yayapeiyin.com,DIRECT
 DOMAIN-SUFFIX,ybjk.com,DIRECT
+DOMAIN-SUFFIX,ybjx.net,DIRECT
 DOMAIN-SUFFIX,ybscjp.com,DIRECT
 DOMAIN-SUFFIX,ydstatic.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
