--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -607,6 +607,7 @@ DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkbdw.net,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
+DOMAIN-SUFFIX,jkydt.com,DIRECT
 DOMAIN-SUFFIX,jlpay.com,DIRECT
 DOMAIN-SUFFIX,jmj.cc,DIRECT
 DOMAIN-SUFFIX,joinchitchat.com,DIRECT
