--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1151,6 +1151,7 @@ DOMAIN-SUFFIX,zhipin.com,DIRECT
 DOMAIN-SUFFIX,zhisanzhao.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
 DOMAIN-SUFFIX,zhongche.com,DIRECT
+DOMAIN-SUFFIX,zhtzc.com,DIRECT
 DOMAIN-SUFFIX,zhujiceping.com,DIRECT
 DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zjcdn.com,DIRECT
