--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -189,6 +189,7 @@ DOMAIN-SUFFIX,antfans.com,DIRECT
 DOMAIN-SUFFIX,antgroup.com,DIRECT
 DOMAIN-SUFFIX,anythinktech.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
+DOMAIN-SUFFIX,anzhuoshouzhuan.com,DIRECT
 DOMAIN-SUFFIX,apple886.com,DIRECT
 DOMAIN-SUFFIX,appsimg.com,DIRECT
 DOMAIN-SUFFIX,appvipshop.com,DIRECT
