--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -95,6 +95,7 @@ DOMAIN-SUFFIX,32r.com,DIRECT
 DOMAIN-SUFFIX,3322.cc,DIRECT
 DOMAIN-SUFFIX,3366.com,DIRECT
 DOMAIN-SUFFIX,360buyimg.com,DIRECT
+DOMAIN-SUFFIX,360che.com,DIRECT
 DOMAIN-SUFFIX,360doc.com,DIRECT
 DOMAIN-SUFFIX,360in.com,DIRECT
 DOMAIN-SUFFIX,365dmp.com,DIRECT
