--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -85,6 +85,7 @@ DOMAIN-SUFFIX,17usoft.com,DIRECT
 DOMAIN-SUFFIX,188188.org,DIRECT
 DOMAIN-SUFFIX,1ppt.com,DIRECT
 DOMAIN-SUFFIX,1rtb.net,DIRECT
+DOMAIN-SUFFIX,1sapp.com,DIRECT
 DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
 DOMAIN-SUFFIX,21jingji.com,DIRECT
@@ -623,6 +624,7 @@ DOMAIN-SUFFIX,jsyks.com,DIRECT
 DOMAIN-SUFFIX,jszksw.com,DIRECT
 DOMAIN-SUFFIX,jxedt.com,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
+DOMAIN-SUFFIX,kakamobi.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
 DOMAIN-SUFFIX,kaspersky-labs.com,DIRECT
 DOMAIN-SUFFIX,kcdnvip.com,DIRECT
