--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -710,6 +710,7 @@ DOMAIN-SUFFIX,ly.com,DIRECT
 DOMAIN-SUFFIX,macrr.com,DIRECT
 DOMAIN-SUFFIX,mafengwo.net,DIRECT
 DOMAIN-SUFFIX,magiconch.com,DIRECT
+DOMAIN-SUFFIX,maiche.com,DIRECT
 DOMAIN-SUFFIX,maigoo.com,DIRECT
 DOMAIN-SUFFIX,manmanbuy.com,DIRECT
 DOMAIN-SUFFIX,maoyan.com,DIRECT
@@ -753,6 +754,7 @@ DOMAIN-SUFFIX,mubu.com,DIRECT
 DOMAIN-SUFFIX,muniao.com,DIRECT
 DOMAIN-SUFFIX,mxhichina.com,DIRECT
 DOMAIN-SUFFIX,mxnzp.com,DIRECT
+DOMAIN-SUFFIX,my-imcloud.com,DIRECT
 DOMAIN-SUFFIX,myalicdn.com,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
