--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -904,6 +904,7 @@ DOMAIN-SUFFIX,sohucs.com,DIRECT
 DOMAIN-SUFFIX,soku.com,DIRECT
 DOMAIN-SUFFIX,soso.com,DIRECT
 DOMAIN-SUFFIX,sosoyunpan.com,DIRECT
+DOMAIN-SUFFIX,souajki.net,DIRECT
 DOMAIN-SUFFIX,sov2ex.com,DIRECT
 DOMAIN-SUFFIX,spdydns.com,DIRECT
 DOMAIN-SUFFIX,sspai.com,DIRECT
