--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -234,6 +234,7 @@ DOMAIN-SUFFIX,beitaichufang.com,DIRECT
 DOMAIN-SUFFIX,beizi.biz,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
 DOMAIN-SUFFIX,bendibao.com,DIRECT
+DOMAIN-SUFFIX,bestseaglasses.com,DIRECT
 DOMAIN-SUFFIX,bidchance.com,DIRECT
 DOMAIN-SUFFIX,biliapi.com,DIRECT
 DOMAIN-SUFFIX,biliapi.net,DIRECT
