--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -89,6 +89,7 @@ DOMAIN-SUFFIX,1sapp.com,DIRECT
 DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
 DOMAIN-SUFFIX,21jingji.com,DIRECT
+DOMAIN-SUFFIX,2haoyj.com,DIRECT
 DOMAIN-SUFFIX,300hu.com,DIRECT
 DOMAIN-SUFFIX,31huiyi.com,DIRECT
 DOMAIN-SUFFIX,31idc.com,DIRECT
