--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1059,6 +1059,7 @@ DOMAIN-SUFFIX,woshipm.com,DIRECT
 DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
 DOMAIN-SUFFIX,wtzw.com,DIRECT
+DOMAIN-SUFFIX,wuht.net,DIRECT
 DOMAIN-SUFFIX,wuyuidc.com,DIRECT
 DOMAIN-SUFFIX,wxgateway.com,DIRECT
 DOMAIN-SUFFIX,xcarimg.com,DIRECT
