--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -700,6 +700,7 @@ DOMAIN-SUFFIX,live-voip.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
 DOMAIN-SUFFIX,lixiang.com,DIRECT
 DOMAIN-SUFFIX,ljcdn.com,DIRECT
+DOMAIN-SUFFIX,lmspay.com,DIRECT
 DOMAIN-SUFFIX,lnk0.com,DIRECT
 DOMAIN-SUFFIX,lofter.com,DIRECT
 DOMAIN-SUFFIX,loli.net,DIRECT
@@ -1062,6 +1063,7 @@ DOMAIN-SUFFIX,wtzw.com,DIRECT
 DOMAIN-SUFFIX,wuht.net,DIRECT
 DOMAIN-SUFFIX,wuyuidc.com,DIRECT
 DOMAIN-SUFFIX,wxgateway.com,DIRECT
+DOMAIN-SUFFIX,xaykt.com,DIRECT
 DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
