--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1078,6 +1078,7 @@ DOMAIN-SUFFIX,xiamenair.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
 DOMAIN-SUFFIX,xiami.net,DIRECT
 DOMAIN-SUFFIX,xiancn.com,DIRECT
+DOMAIN-SUFFIX,xianjiaojing.com,DIRECT
 DOMAIN-SUFFIX,xiaohongshu.com,DIRECT
 DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
 DOMAIN-SUFFIX,xiaomark.com,DIRECT
