--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -74,6 +74,7 @@ DOMAIN-SUFFIX,126.net,DIRECT
 DOMAIN-SUFFIX,127.net,DIRECT
 DOMAIN-SUFFIX,139.com,DIRECT
 DOMAIN-SUFFIX,160.com,DIRECT
+DOMAIN-SUFFIX,161580.com,DIRECT
 DOMAIN-SUFFIX,163.com,DIRECT
 DOMAIN-SUFFIX,163yun.com,DIRECT
 DOMAIN-SUFFIX,1688.com,DIRECT
@@ -338,6 +339,7 @@ DOMAIN-SUFFIX,cmpassport.com,DIRECT
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,cnblogs.com,DIRECT
 DOMAIN-SUFFIX,cncrk.com,DIRECT
+DOMAIN-SUFFIX,cnfol.com,DIRECT
 DOMAIN-SUFFIX,cnki.net,DIRECT
 DOMAIN-SUFFIX,cnmia.org,DIRECT
 DOMAIN-SUFFIX,cnmstl.net,DIRECT
