--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -626,6 +626,7 @@ DOMAIN-SUFFIX,jpplanking.com,DIRECT
 DOMAIN-SUFFIX,jpush.io,DIRECT
 DOMAIN-SUFFIX,jsyks.com,DIRECT
 DOMAIN-SUFFIX,jszksw.com,DIRECT
+DOMAIN-SUFFIX,justwe.asia,DIRECT
 DOMAIN-SUFFIX,jxedt.com,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
 DOMAIN-SUFFIX,kakamobi.com,DIRECT
@@ -690,6 +691,7 @@ DOMAIN-SUFFIX,le.com,DIRECT
 DOMAIN-SUFFIX,leapmotor.com,DIRECT
 DOMAIN-SUFFIX,learnku.com,DIRECT
 DOMAIN-SUFFIX,leju.com,DIRECT
+DOMAIN-SUFFIX,lemeng.center,DIRECT
 DOMAIN-SUFFIX,letv.com,DIRECT
 DOMAIN-SUFFIX,leyunge.com,DIRECT
 DOMAIN-SUFFIX,lf127.net,DIRECT
