--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1095,6 +1095,7 @@ DOMAIN-SUFFIX,xin.com,DIRECT
 DOMAIN-SUFFIX,xinchacha.com,DIRECT
 DOMAIN-SUFFIX,xingming.com,DIRECT
 DOMAIN-SUFFIX,xinhuanet.com,DIRECT
+DOMAIN-SUFFIX,xinli001.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xiyacs.com,DIRECT
 DOMAIN-SUFFIX,xmcdn.com,DIRECT
