--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -806,6 +806,7 @@ DOMAIN-SUFFIX,pchome.net,DIRECT
 DOMAIN-SUFFIX,pddpic.com,DIRECT
 DOMAIN-SUFFIX,pddugc.com,DIRECT
 DOMAIN-SUFFIX,pglstatp-toutiao.com,DIRECT
+DOMAIN-SUFFIX,pianyivps.com,DIRECT
 DOMAIN-SUFFIX,pinduoduo.com,DIRECT
 DOMAIN-SUFFIX,pinduoduo.net,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
