--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -912,6 +912,7 @@ DOMAIN-SUFFIX,sohucs.com,DIRECT
 DOMAIN-SUFFIX,soku.com,DIRECT
 DOMAIN-SUFFIX,soso.com,DIRECT
 DOMAIN-SUFFIX,sosoyunpan.com,DIRECT
+DOMAIN-SUFFIX,souajki.com,DIRECT
 DOMAIN-SUFFIX,souajki.net,DIRECT
 DOMAIN-SUFFIX,sov2ex.com,DIRECT
 DOMAIN-SUFFIX,spdydns.com,DIRECT
