--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -176,6 +176,7 @@ DOMAIN-SUFFIX,alimama.com,DIRECT
 DOMAIN-SUFFIX,alimebot.com,DIRECT
 DOMAIN-SUFFIX,alipan.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
+DOMAIN-SUFFIX,alipay-eco.com,DIRECT
 DOMAIN-SUFFIX,alipayobjects.com,DIRECT
 DOMAIN-SUFFIX,alipcsec.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
@@ -428,6 +429,7 @@ DOMAIN-SUFFIX,elemecdn.com,DIRECT
 DOMAIN-SUFFIX,elian360.com,DIRECT
 DOMAIN-SUFFIX,elong.com,DIRECT
 DOMAIN-SUFFIX,elongstatic.com,DIRECT
+DOMAIN-SUFFIX,enmonster.com,DIRECT
 DOMAIN-SUFFIX,epubee.com,DIRECT
 DOMAIN-SUFFIX,etao.com,DIRECT
 DOMAIN-SUFFIX,etoote.com,DIRECT
