--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -181,6 +181,7 @@ DOMAIN-SUFFIX,alipayobjects.com,DIRECT
 DOMAIN-SUFFIX,alipcsec.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
+DOMAIN-SUFFIX,aliyun-inc.com,DIRECT
 DOMAIN-SUFFIX,aliyuncs.com,DIRECT
 DOMAIN-SUFFIX,aliyundrive.com,DIRECT
 DOMAIN-SUFFIX,alphassl.com,DIRECT
