--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -941,6 +941,7 @@ DOMAIN-SUFFIX,tanx.com,DIRECT
 DOMAIN-SUFFIX,taobao.com,DIRECT
 DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
+DOMAIN-SUFFIX,taopiaopiao.com,DIRECT
 DOMAIN-SUFFIX,tbcache.com,DIRECT
 DOMAIN-SUFFIX,tcdnos.com,DIRECT
 DOMAIN-SUFFIX,tec73.com,DIRECT
