--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -702,6 +702,7 @@ DOMAIN-SUFFIX,liangxinyao.com,DIRECT
 DOMAIN-SUFFIX,lianjia.com,DIRECT
 DOMAIN-SUFFIX,lianqi.net,DIRECT
 DOMAIN-SUFFIX,liepin.com,DIRECT
+DOMAIN-SUFFIX,likunyu.com,DIRECT
 DOMAIN-SUFFIX,linuxprobe.com,DIRECT
 DOMAIN-SUFFIX,live-voip.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
