--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -172,6 +172,7 @@ DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alidns.com,DIRECT
 DOMAIN-SUFFIX,alikunlun.com,DIRECT
+DOMAIN-SUFFIX,alimail-china.com,DIRECT
 DOMAIN-SUFFIX,alimama.com,DIRECT
 DOMAIN-SUFFIX,alimebot.com,DIRECT
 DOMAIN-SUFFIX,alipan.com,DIRECT
