--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1069,6 +1069,7 @@ DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,wosaimg.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
+DOMAIN-SUFFIX,wpjam.com,DIRECT
 DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
 DOMAIN-SUFFIX,wtzw.com,DIRECT
