--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -932,6 +932,7 @@ DOMAIN-SUFFIX,supercachenet.com,DIRECT
 DOMAIN-SUFFIX,suqicloud.com,DIRECT
 DOMAIN-SUFFIX,svw-volkswagen.com,DIRECT
 DOMAIN-SUFFIX,sxnfss.com,DIRECT
+DOMAIN-SUFFIX,symbolbit.com,DIRECT
 DOMAIN-SUFFIX,szbdyd.com,DIRECT
 DOMAIN-SUFFIX,taijizhidian.com,DIRECT
 DOMAIN-SUFFIX,takungpao.com,DIRECT
