--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -779,6 +779,7 @@ DOMAIN-SUFFIX,ndcimgs.com,DIRECT
 DOMAIN-SUFFIX,ndcpp.com,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
 DOMAIN-SUFFIX,netease.im,DIRECT
+DOMAIN-SUFFIX,newtranx.com,DIRECT
 DOMAIN-SUFFIX,nexusedgeio.com,DIRECT
 DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nio.com,DIRECT
