--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -783,6 +783,7 @@ DOMAIN-SUFFIX,newtranx.com,DIRECT
 DOMAIN-SUFFIX,nexusedgeio.com,DIRECT
 DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nio.com,DIRECT
+DOMAIN-SUFFIX,njmapp.com,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,oceanengine.com,DIRECT
 DOMAIN-SUFFIX,offersloc.com,DIRECT
