--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -602,6 +602,7 @@ DOMAIN-SUFFIX,jdl.com,DIRECT
 DOMAIN-SUFFIX,jdpay.com,DIRECT
 DOMAIN-SUFFIX,jdwl.com,DIRECT
 DOMAIN-SUFFIX,jhscm.com,DIRECT
+DOMAIN-SUFFIX,jhscrm.com,DIRECT
 DOMAIN-SUFFIX,jiakaobaodian.com,DIRECT
 DOMAIN-SUFFIX,jialutong.net,DIRECT
 DOMAIN-SUFFIX,jianguoyun.com,DIRECT
