--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -103,6 +103,7 @@ DOMAIN-SUFFIX,360doc.com,DIRECT
 DOMAIN-SUFFIX,360in.com,DIRECT
 DOMAIN-SUFFIX,365dmp.com,DIRECT
 DOMAIN-SUFFIX,365icl.com,DIRECT
+DOMAIN-SUFFIX,365yg.com,DIRECT
 DOMAIN-SUFFIX,36kr.com,DIRECT
 DOMAIN-SUFFIX,39.net,DIRECT
 DOMAIN-SUFFIX,3dmgame.com,DIRECT
