--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -951,6 +951,7 @@ DOMAIN-SUFFIX,taoche.com,DIRECT
 DOMAIN-SUFFIX,taopiaopiao.com,DIRECT
 DOMAIN-SUFFIX,tbcache.com,DIRECT
 DOMAIN-SUFFIX,tcdnos.com,DIRECT
+DOMAIN-SUFFIX,tcloudbaseapp.com,DIRECT
 DOMAIN-SUFFIX,tec73.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
