--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1044,6 +1044,7 @@ DOMAIN-SUFFIX,vpsjxw.com,DIRECT
 DOMAIN-SUFFIX,vpsmr.com,DIRECT
 DOMAIN-SUFFIX,vpsxxs.com,DIRECT
 DOMAIN-SUFFIX,vzuu.com,DIRECT
+DOMAIN-SUFFIX,wailianvisa.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,wangsu.com,DIRECT
 DOMAIN-SUFFIX,wanwupai.com,DIRECT
