--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -884,6 +884,7 @@ DOMAIN-SUFFIX,searchpstatp.com,DIRECT
 DOMAIN-SUFFIX,sectigochina.com,DIRECT
 DOMAIN-SUFFIX,segmentfault.com,DIRECT
 DOMAIN-SUFFIX,sendcloud.net,DIRECT
+DOMAIN-SUFFIX,senseluxury.com,DIRECT
 DOMAIN-SUFFIX,servicewechat.com,DIRECT
 DOMAIN-SUFFIX,sf-card.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
