--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -510,6 +510,7 @@ DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hangzyuyuan.com,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hao123img.com,DIRECT
+DOMAIN-SUFFIX,hao86.com,DIRECT
 DOMAIN-SUFFIX,haoshiqi.net,DIRECT
 DOMAIN-SUFFIX,haozhuji.net,DIRECT
 DOMAIN-SUFFIX,happy-ti.com,DIRECT
