--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -497,6 +497,7 @@ DOMAIN-SUFFIX,grg-gas.com,DIRECT
 DOMAIN-SUFFIX,grg-gases.com,DIRECT
 DOMAIN-SUFFIX,gridsumdissector.com,DIRECT
 DOMAIN-SUFFIX,growingio.com,DIRECT
+DOMAIN-SUFFIX,gter.net,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
 DOMAIN-SUFFIX,gtlrxt.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
