--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -906,6 +906,7 @@ DOMAIN-SUFFIX,sinaapp.com,DIRECT
 DOMAIN-SUFFIX,sjxydc.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,smartisan.com,DIRECT
+DOMAIN-SUFFIX,smogfly.cloud,DIRECT
 DOMAIN-SUFFIX,smtcdns.com,DIRECT
 DOMAIN-SUFFIX,smtcdns.net,DIRECT
 DOMAIN-SUFFIX,smxs.com,DIRECT
