--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -907,6 +907,7 @@ DOMAIN-SUFFIX,sjxydc.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,smartisan.com,DIRECT
 DOMAIN-SUFFIX,smogfly.cloud,DIRECT
+DOMAIN-SUFFIX,smogfly.club,DIRECT
 DOMAIN-SUFFIX,smtcdns.com,DIRECT
 DOMAIN-SUFFIX,smtcdns.net,DIRECT
 DOMAIN-SUFFIX,smxs.com,DIRECT
