--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -300,6 +300,7 @@ DOMAIN-SUFFIX,cankaoxiaoxi.com,DIRECT
 DOMAIN-SUFFIX,ccb.com,DIRECT
 DOMAIN-SUFFIX,ccgslb.com,DIRECT
 DOMAIN-SUFFIX,ccgslb.net,DIRECT
+DOMAIN-SUFFIX,ccqyj.com,DIRECT
 DOMAIN-SUFFIX,cctv.com,DIRECT
 DOMAIN-SUFFIX,cctvpic.com,DIRECT
 DOMAIN-SUFFIX,cdnchatgpt.com,DIRECT
@@ -353,6 +354,7 @@ DOMAIN-SUFFIX,coalcloud.net,DIRECT
 DOMAIN-SUFFIX,cocoachina.com,DIRECT
 DOMAIN-SUFFIX,cowtransfer.com,DIRECT
 DOMAIN-SUFFIX,cq-wnl.com,DIRECT
+DOMAIN-SUFFIX,cqdingyan.com,DIRECT
 DOMAIN-SUFFIX,cr173.com,DIRECT
 DOMAIN-SUFFIX,crsky.com,DIRECT
 DOMAIN-SUFFIX,csair.com,DIRECT
@@ -755,6 +757,7 @@ DOMAIN-SUFFIX,mihoyo.com,DIRECT
 DOMAIN-SUFFIX,minapp.com,DIRECT
 DOMAIN-SUFFIX,miui.com,DIRECT
 DOMAIN-SUFFIX,miwifi.com,DIRECT
+DOMAIN-SUFFIX,mlogcn.com,DIRECT
 DOMAIN-SUFFIX,mmarket.com,DIRECT
 DOMAIN-SUFFIX,mmstat.com,DIRECT
 DOMAIN-SUFFIX,mob.com,DIRECT
@@ -762,6 +765,7 @@ DOMAIN-SUFFIX,mobike.com,DIRECT
 DOMAIN-SUFFIX,mobsurl.com,DIRECT
 DOMAIN-SUFFIX,modulesocean.com,DIRECT
 DOMAIN-SUFFIX,mogucdn.com,DIRECT
+DOMAIN-SUFFIX,moji.com,DIRECT
 DOMAIN-SUFFIX,mokahr.com,DIRECT
 DOMAIN-SUFFIX,mop.com,DIRECT
 DOMAIN-SUFFIX,msstatic.com,DIRECT
