--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -225,6 +225,7 @@ DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankcomm.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
+DOMAIN-SUFFIX,bayescom.com,DIRECT
 DOMAIN-SUFFIX,bazhuayu.com,DIRECT
 DOMAIN-SUFFIX,bbtx.net,DIRECT
 DOMAIN-SUFFIX,bcebos.com,DIRECT
