--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -767,6 +767,9 @@ DOMAIN-SUFFIX,mobsurl.com,DIRECT
 DOMAIN-SUFFIX,modulesocean.com,DIRECT
 DOMAIN-SUFFIX,mogucdn.com,DIRECT
 DOMAIN-SUFFIX,moji.com,DIRECT
+DOMAIN-SUFFIX,moji001.com,DIRECT
+DOMAIN-SUFFIX,moji002.com,DIRECT
+DOMAIN-SUFFIX,mojicdn.com,DIRECT
 DOMAIN-SUFFIX,mokahr.com,DIRECT
 DOMAIN-SUFFIX,mop.com,DIRECT
 DOMAIN-SUFFIX,msstatic.com,DIRECT
