--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -452,6 +452,7 @@ DOMAIN-SUFFIX,eudic.net,DIRECT
 DOMAIN-SUFFIX,exeedcars.com,DIRECT
 DOMAIN-SUFFIX,faceu.mobi,DIRECT
 DOMAIN-SUFFIX,fadada.com,DIRECT
+DOMAIN-SUFFIX,famengsi.com,DIRECT
 DOMAIN-SUFFIX,fancyapi.com,DIRECT
 DOMAIN-SUFFIX,fang.com,DIRECT
 DOMAIN-SUFFIX,fangchengbao.com,DIRECT
