--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -117,6 +117,7 @@ DOMAIN-SUFFIX,51test.net,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
 DOMAIN-SUFFIX,51wnl.com,DIRECT
 DOMAIN-SUFFIX,52asus.com,DIRECT
+DOMAIN-SUFFIX,52dian.com,DIRECT
 DOMAIN-SUFFIX,52xpp.com,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
