--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -521,6 +521,7 @@ DOMAIN-SUFFIX,haoshiqi.net,DIRECT
 DOMAIN-SUFFIX,haozhuji.net,DIRECT
 DOMAIN-SUFFIX,happy-ti.com,DIRECT
 DOMAIN-SUFFIX,hc-cdn.com,DIRECT
+DOMAIN-SUFFIX,hcwgx.com,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,hellobixin.com,DIRECT
 DOMAIN-SUFFIX,hellorf.com,DIRECT
