--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -750,6 +750,7 @@ DOMAIN-SUFFIX,meitustat.com,DIRECT
 DOMAIN-SUFFIX,meixincdn.com,DIRECT
 DOMAIN-SUFFIX,meizu.com,DIRECT
 DOMAIN-SUFFIX,mgtv.com,DIRECT
+DOMAIN-SUFFIX,mi-fds.com,DIRECT
 DOMAIN-SUFFIX,mi-img.com,DIRECT
 DOMAIN-SUFFIX,mi.com,DIRECT
 DOMAIN-SUFFIX,mianyangauto.com,DIRECT
@@ -1190,6 +1191,8 @@ DOMAIN-SUFFIX,yy.com,DIRECT
 DOMAIN-SUFFIX,zbj.com,DIRECT
 DOMAIN-SUFFIX,zbjimg.com,DIRECT
 DOMAIN-SUFFIX,zdic.net,DIRECT
+DOMAIN-SUFFIX,zdmimg.com,DIRECT
+DOMAIN-SUFFIX,zdming.com,DIRECT
 DOMAIN-SUFFIX,zeekrlife.com,DIRECT
 DOMAIN-SUFFIX,zhanqi.tv,DIRECT
 DOMAIN-SUFFIX,zhaopin.com,DIRECT
