--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -64,7 +64,7 @@ DOMAIN-KEYWORD,kwai,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-KEYWORD,xigua,DIRECT
 DOMAIN-KEYWORD,snssdk.com,DIRECT
-DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
+DOMAIN-SUFFIX,0kkkkkt.com,DIRECT  
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -129,6 +129,7 @@ DOMAIN-SUFFIX,66mobi.com,DIRECT
 DOMAIN-SUFFIX,67tool.com,DIRECT
 DOMAIN-SUFFIX,699pic.com,DIRECT
 DOMAIN-SUFFIX,6k6g.com,DIRECT
+DOMAIN-SUFFIX,70bd.com,DIRECT
 DOMAIN-SUFFIX,71edge.com,DIRECT
 DOMAIN-SUFFIX,7down.com,DIRECT
 DOMAIN-SUFFIX,7fresh.com,DIRECT
@@ -305,6 +306,7 @@ DOMAIN-SUFFIX,ccgslb.net,DIRECT
 DOMAIN-SUFFIX,ccqyj.com,DIRECT
 DOMAIN-SUFFIX,cctv.com,DIRECT
 DOMAIN-SUFFIX,cctvpic.com,DIRECT
+DOMAIN-SUFFIX,cddfct.com,DIRECT
 DOMAIN-SUFFIX,cdnchatgpt.com,DIRECT
 DOMAIN-SUFFIX,cdnhwc2.com,DIRECT
 DOMAIN-SUFFIX,cdntips.net,DIRECT
@@ -843,6 +845,7 @@ DOMAIN-SUFFIX,ppsport.com,DIRECT
 DOMAIN-SUFFIX,pptv.com,DIRECT
 DOMAIN-SUFFIX,processon.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
+DOMAIN-SUFFIX,ptyqm.com,DIRECT
 DOMAIN-SUFFIX,puata.info,DIRECT
 DOMAIN-SUFFIX,q2cdn.com,DIRECT
 DOMAIN-SUFFIX,qbox.me,DIRECT
@@ -949,6 +952,7 @@ DOMAIN-SUFFIX,ssrcdn.com,DIRECT
 DOMAIN-SUFFIX,staticdn.net,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,staybrowser.com,DIRECT
+DOMAIN-SUFFIX,streamlakeapi.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,supercachenet.com,DIRECT
 DOMAIN-SUFFIX,suqicloud.com,DIRECT
@@ -1094,6 +1098,7 @@ DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,wosaimg.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
+DOMAIN-SUFFIX,wpista.com,DIRECT
 DOMAIN-SUFFIX,wpjam.com,DIRECT
 DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
@@ -1182,6 +1187,7 @@ DOMAIN-SUFFIX,yunshi99.com,DIRECT
 DOMAIN-SUFFIX,yuntue.com,DIRECT
 DOMAIN-SUFFIX,yunxindns.com,DIRECT
 DOMAIN-SUFFIX,yunxiu.com,DIRECT
+DOMAIN-SUFFIX,yunyingpai.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
 DOMAIN-SUFFIX,yximgs.com,DIRECT
