--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -547,6 +547,7 @@ DOMAIN-SUFFIX,huashu-inc.com,DIRECT
 DOMAIN-SUFFIX,huawei.com,DIRECT
 DOMAIN-SUFFIX,huaweicloud.com,DIRECT
 DOMAIN-SUFFIX,huaweistatic.com,DIRECT
+DOMAIN-SUFFIX,huazhu.com,DIRECT
 DOMAIN-SUFFIX,huazirc.com,DIRECT
 DOMAIN-SUFFIX,hudong.com,DIRECT
 DOMAIN-SUFFIX,huigezi.org,DIRECT
