--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1009,6 +1009,7 @@ DOMAIN-SUFFIX,ttkdex.com,DIRECT
 DOMAIN-SUFFIX,tuanche.com,DIRECT
 DOMAIN-SUFFIX,tuchong.com,DIRECT
 DOMAIN-SUFFIX,tudou.com,DIRECT
+DOMAIN-SUFFIX,tujia.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
 DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
