--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -69,6 +69,7 @@ DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,12365auto.com,DIRECT
+DOMAIN-SUFFIX,125visa.com,DIRECT
 DOMAIN-SUFFIX,126.com,DIRECT
 DOMAIN-SUFFIX,126.net,DIRECT
 DOMAIN-SUFFIX,127.net,DIRECT
