--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -992,6 +992,7 @@ DOMAIN-SUFFIX,tianyancha.com,DIRECT
 DOMAIN-SUFFIX,tingyun.com,DIRECT
 DOMAIN-SUFFIX,tjjt360.com,DIRECT
 DOMAIN-SUFFIX,tktoc.com,DIRECT
+DOMAIN-SUFFIX,tliveapp.com,DIRECT
 DOMAIN-SUFFIX,tliveplay.com,DIRECT
 DOMAIN-SUFFIX,tlivesource.com,DIRECT
 DOMAIN-SUFFIX,tljdgc.com,DIRECT
@@ -1222,6 +1223,7 @@ DOMAIN-SUFFIX,zjpc.cc,DIRECT
 DOMAIN-SUFFIX,zone139.com,DIRECT
 DOMAIN-SUFFIX,zto.com,DIRECT
 DOMAIN-SUFFIX,zybang.com,DIRECT
+DOMAIN-SUFFIX,ztfly.com,DIRECT
 FINAL,PROXY
 
 [Host]
