--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1223,7 +1223,7 @@ DOMAIN-SUFFIX,zjpc.cc,DIRECT
 DOMAIN-SUFFIX,zone139.com,DIRECT
 DOMAIN-SUFFIX,zto.com,DIRECT
 DOMAIN-SUFFIX,zybang.com,DIRECT
-DOMAIN-SUFFIX,ztfly.com,DIRECT
+DOMAIN-SUFFIX,zztfly.com,DIRECT
 FINAL,PROXY
 
 [Host]
