--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -369,6 +369,7 @@ DOMAIN-SUFFIX,csjplatform.com,DIRECT
 DOMAIN-SUFFIX,cssmoban.com,DIRECT
 DOMAIN-SUFFIX,ctobsnssdk.com,DIRECT
 DOMAIN-SUFFIX,ctrip.com,DIRECT
+DOMAIN-SUFFIX,ctripins.com,DIRECT
 DOMAIN-SUFFIX,cyol.com,DIRECT
 DOMAIN-SUFFIX,dailygn.com,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
@@ -1007,6 +1008,7 @@ DOMAIN-SUFFIX,toutiao.com,DIRECT
 DOMAIN-SUFFIX,toutiaoimg.com,DIRECT
 DOMAIN-SUFFIX,toutiaostatic.com,DIRECT
 DOMAIN-SUFFIX,trackingio.com,DIRECT
+DOMAIN-SUFFIX,tripcdn.com,DIRECT
 DOMAIN-SUFFIX,ttkdex.com,DIRECT
 DOMAIN-SUFFIX,tuanche.com,DIRECT
 DOMAIN-SUFFIX,tuchong.com,DIRECT
