--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -956,6 +956,7 @@ DOMAIN-SUFFIX,staticdn.net,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,staybrowser.com,DIRECT
 DOMAIN-SUFFIX,streamlakeapi.com,DIRECT
+DOMAIN-SUFFIX,suishibanzhuan.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,supercachenet.com,DIRECT
 DOMAIN-SUFFIX,suqicloud.com,DIRECT
@@ -1211,6 +1212,7 @@ DOMAIN-SUFFIX,zhaopin.com,DIRECT
 DOMAIN-SUFFIX,zhe2.com,DIRECT
 DOMAIN-SUFFIX,zhenai.com,DIRECT
 DOMAIN-SUFFIX,zhibo8.cc,DIRECT
+DOMAIN-SUFFIX,zhidx.com,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
