--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1144,6 +1144,7 @@ DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xinli001.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xiyacs.com,DIRECT
+DOMAIN-SUFFIX,xlyvps.com,DIRECT
 DOMAIN-SUFFIX,xmcdn.com,DIRECT
 DOMAIN-SUFFIX,xshiqi.com,DIRECT
 DOMAIN-SUFFIX,xueche.com,DIRECT
