--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -812,6 +812,8 @@ DOMAIN-SUFFIX,offersloc.com,DIRECT
 DOMAIN-SUFFIX,ofweek.com,DIRECT
 DOMAIN-SUFFIX,oldtang.com,DIRECT
 DOMAIN-SUFFIX,onegreen.net,DIRECT
+DOMAIN-SUFFIX,oneplus.com,DIRECT
+DOMAIN-SUFFIX,oneplusbbs.com,DIRECT
 DOMAIN-SUFFIX,onethingpcs.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,openinstall.io,DIRECT
