--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -114,6 +114,7 @@ DOMAIN-SUFFIX,4399.com,DIRECT
 DOMAIN-SUFFIX,51.la,DIRECT
 DOMAIN-SUFFIX,51cto.com,DIRECT
 DOMAIN-SUFFIX,51epei.com,DIRECT
+DOMAIN-SUFFIX,51ping.com,DIRECT
 DOMAIN-SUFFIX,51test.net,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
 DOMAIN-SUFFIX,51wnl.com,DIRECT
@@ -1039,6 +1040,7 @@ DOMAIN-SUFFIX,umsns.com,DIRECT
 DOMAIN-SUFFIX,umtrack.com,DIRECT
 DOMAIN-SUFFIX,unicompayment.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
+DOMAIN-SUFFIX,uri6.com,DIRECT
 DOMAIN-SUFFIX,uuchuzu.com,DIRECT
 DOMAIN-SUFFIX,uupt.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
