--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -274,6 +274,7 @@ DOMAIN-SUFFIX,bwton.com,DIRECT
 DOMAIN-SUFFIX,bxyuer.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
 DOMAIN-SUFFIX,bytecdn.com,DIRECT
+DOMAIN-SUFFIX,bytecdntp.com,DIRECT
 DOMAIN-SUFFIX,byted-static.com,DIRECT
 DOMAIN-SUFFIX,byted-ug.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
