--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -572,6 +572,7 @@ DOMAIN-SUFFIX,iciba.com,DIRECT
 DOMAIN-SUFFIX,icourse163.org,DIRECT
 DOMAIN-SUFFIX,icpapi.com,DIRECT
 DOMAIN-SUFFIX,idc.wiki,DIRECT
+DOMAIN-SUFFIX,idcspy.com,DIRECT
 DOMAIN-SUFFIX,idouyinvod.com,DIRECT
 DOMAIN-SUFFIX,idqqimg.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
