--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -338,6 +338,7 @@ DOMAIN-SUFFIX,chuimg.com,DIRECT
 DOMAIN-SUFFIX,chunyu.mobi,DIRECT
 DOMAIN-SUFFIX,chuxingyouhui.com,DIRECT
 DOMAIN-SUFFIX,cibntv.net,DIRECT
+DOMAIN-SUFFIX,cip.cc,DIRECT
 DOMAIN-SUFFIX,citicbank.com,DIRECT
 DOMAIN-SUFFIX,cl2009.com,DIRECT
 DOMAIN-SUFFIX,clewm.net,DIRECT
