--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -401,6 +401,7 @@ DOMAIN-SUFFIX,docschina.org,DIRECT
 DOMAIN-SUFFIX,doh.pub,DIRECT
 DOMAIN-SUFFIX,dongchedi.com,DIRECT
 DOMAIN-SUFFIX,dongqiudi.com,DIRECT
+DOMAIN-SUFFIX,dot.pub,DIRECT
 DOMAIN-SUFFIX,douban.com,DIRECT
 DOMAIN-SUFFIX,doubanio.com,DIRECT
 DOMAIN-SUFFIX,doupay.com,DIRECT
@@ -815,6 +816,7 @@ DOMAIN-SUFFIX,oceanengine.com,DIRECT
 DOMAIN-SUFFIX,offersloc.com,DIRECT
 DOMAIN-SUFFIX,ofweek.com,DIRECT
 DOMAIN-SUFFIX,oldtang.com,DIRECT
+DOMAIN-SUFFIX,onedns.net,DIRECT
 DOMAIN-SUFFIX,onegreen.net,DIRECT
 DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,oneplusbbs.com,DIRECT
