--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -184,6 +184,7 @@ DOMAIN-SUFFIX,alipan.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
 DOMAIN-SUFFIX,alipay-eco.com,DIRECT
 DOMAIN-SUFFIX,alipayobjects.com,DIRECT
+DOMAIN-SUFFIX,alipayplus.com,DIRECT
 DOMAIN-SUFFIX,alipcsec.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
