--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1115,6 +1115,7 @@ DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,wosaimg.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
+DOMAIN-SUFFIX,wpeyes.com,DIRECT
 DOMAIN-SUFFIX,wpista.com,DIRECT
 DOMAIN-SUFFIX,wpjam.com,DIRECT
 DOMAIN-SUFFIX,wqop2018.com,DIRECT
