--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -64,7 +64,7 @@ DOMAIN-KEYWORD,kwai,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-KEYWORD,xigua,DIRECT
 DOMAIN-KEYWORD,snssdk.com,DIRECT
-DOMAIN-SUFFIX,0kkkkkt.com,DIRECT  
+DOMAIN-SUFFIX,0kkkkkt.com,DIRECT    
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -1088,6 +1088,7 @@ DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,wangsu.com,DIRECT
 DOMAIN-SUFFIX,wanwupai.com,DIRECT
 DOMAIN-SUFFIX,wasu.tv,DIRECT
+DOMAIN-SUFFIX,wbolt.com,DIRECT
 DOMAIN-SUFFIX,webkaka.com,DIRECT
 DOMAIN-SUFFIX,webziv.com,DIRECT
 DOMAIN-SUFFIX,wechat.com,DIRECT
@@ -1115,6 +1116,7 @@ DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,wosaimg.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
+DOMAIN-SUFFIX,wpdaxue.com,DIRECT
 DOMAIN-SUFFIX,wpeyes.com,DIRECT
 DOMAIN-SUFFIX,wpista.com,DIRECT
 DOMAIN-SUFFIX,wpjam.com,DIRECT
@@ -1236,6 +1238,7 @@ DOMAIN-SUFFIX,zhujiceping.com,DIRECT
 DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zjcdn.com,DIRECT
 DOMAIN-SUFFIX,zjpc.cc,DIRECT
+DOMAIN-SUFFIX,zmingcx.com,DIRECT
 DOMAIN-SUFFIX,zone139.com,DIRECT
 DOMAIN-SUFFIX,zto.com,DIRECT
 DOMAIN-SUFFIX,zybang.com,DIRECT
