--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1237,6 +1237,7 @@ DOMAIN-SUFFIX,zhongche.com,DIRECT
 DOMAIN-SUFFIX,zhtzc.com,DIRECT
 DOMAIN-SUFFIX,zhujiceping.com,DIRECT
 DOMAIN-SUFFIX,zhuli66.com,DIRECT
+DOMAIN-SUFFIX,zihi.top,DIRECT
 DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zjcdn.com,DIRECT
 DOMAIN-SUFFIX,zjpc.cc,DIRECT
