--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -985,6 +985,7 @@ DOMAIN-SUFFIX,taobao.com,DIRECT
 DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
 DOMAIN-SUFFIX,taopiaopiao.com,DIRECT
+DOMAIN-SUFFIX,tb163.com,DIRECT
 DOMAIN-SUFFIX,tbcache.com,DIRECT
 DOMAIN-SUFFIX,tcdnos.com,DIRECT
 DOMAIN-SUFFIX,tcloudbaseapp.com,DIRECT
