--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1084,6 +1084,7 @@ DOMAIN-SUFFIX,vpimg4.com,DIRECT
 DOMAIN-SUFFIX,vpsgo.com,DIRECT
 DOMAIN-SUFFIX,vpsjxw.com,DIRECT
 DOMAIN-SUFFIX,vpsmr.com,DIRECT
+DOMAIN-SUFFIX,vpsvip.com,DIRECT
 DOMAIN-SUFFIX,vpsxxs.com,DIRECT
 DOMAIN-SUFFIX,vzuu.com,DIRECT
 DOMAIN-SUFFIX,wailianvisa.com,DIRECT
