--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1113,6 +1113,7 @@ DOMAIN-SUFFIX,weshape3d.com,DIRECT
 DOMAIN-SUFFIX,wey.com,DIRECT
 DOMAIN-SUFFIX,win4000.com,DIRECT
 DOMAIN-SUFFIX,wkzf.com,DIRECT
+DOMAIN-SUFFIX,wnluo.com,DIRECT
 DOMAIN-SUFFIX,wo116114.com,DIRECT
 DOMAIN-SUFFIX,woa.com,DIRECT
 DOMAIN-SUFFIX,womai.com,DIRECT
