--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -871,6 +871,7 @@ DOMAIN-SUFFIX,qhimg.com,DIRECT
 DOMAIN-SUFFIX,qichacha.com,DIRECT
 DOMAIN-SUFFIX,qidian.com,DIRECT
 DOMAIN-SUFFIX,qiecdn.com,DIRECT
+DOMAIN-SUFFIX,qiezibenpao.com,DIRECT
 DOMAIN-SUFFIX,qiku.com,DIRECT
 DOMAIN-SUFFIX,qingfuwucdn.net,DIRECT
 DOMAIN-SUFFIX,qingting.fm,DIRECT
@@ -1159,6 +1160,7 @@ DOMAIN-SUFFIX,xinchacha.com,DIRECT
 DOMAIN-SUFFIX,xingming.com,DIRECT
 DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xinli001.com,DIRECT
+DOMAIN-SUFFIX,xinqiucc.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xiyacs.com,DIRECT
 DOMAIN-SUFFIX,xlyvps.com,DIRECT
