--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -191,6 +191,7 @@ DOMAIN-SUFFIX,aliyun.com,DIRECT
 DOMAIN-SUFFIX,aliyun-inc.com,DIRECT
 DOMAIN-SUFFIX,aliyuncs.com,DIRECT
 DOMAIN-SUFFIX,aliyundrive.com,DIRECT
+DOMAIN-SUFFIX,allcitygo.com,DIRECT
 DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
 DOMAIN-SUFFIX,amd.com,DIRECT
