--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -654,6 +654,7 @@ DOMAIN-SUFFIX,jsyks.com,DIRECT
 DOMAIN-SUFFIX,jszksw.com,DIRECT
 DOMAIN-SUFFIX,justwe.asia,DIRECT
 DOMAIN-SUFFIX,jxedt.com,DIRECT
+DOMAIN-SUFFIX,k366.com,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
 DOMAIN-SUFFIX,kakamobi.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
