--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -33,6 +33,7 @@ DOMAIN,us.l.qq.com,REJECT
 DOMAIN-SUFFIX,imtmp.net,REJECT
 DOMAIN-KEYWORD,adcdn,REJECT
 DOMAIN-KEYWORD,tmead,REJECT
+IP-CIDR,95.161.76.100/31,REJECT-NO-DROP,no-resolve
 IP-CIDR,24.199.123.28/32,PROXY,no-resolve
 IP-CIDR,45.76.214.191/32,PROXY,no-resolve
 IP-CIDR,64.23.132.171/32,PROXY,no-resolve
@@ -668,6 +669,7 @@ DOMAIN-SUFFIX,kf5.com,DIRECT
 DOMAIN-SUFFIX,kfzimg.com,DIRECT
 DOMAIN-SUFFIX,kgimg.com,DIRECT
 DOMAIN-SUFFIX,kingsoft.com,DIRECT
+DOMAIN-SUFFIX,kiwiot.com,DIRECT
 DOMAIN-SUFFIX,kkmh.com,DIRECT
 DOMAIN-SUFFIX,klook.com,DIRECT
 DOMAIN-SUFFIX,komect.com,DIRECT
@@ -696,6 +698,7 @@ DOMAIN-SUFFIX,kvov.com,DIRECT
 DOMAIN-SUFFIX,kwaicdn.com,DIRECT
 DOMAIN-SUFFIX,kwaixiaodian.com,DIRECT
 DOMAIN-SUFFIX,kwaizt.com,DIRECT
+DOMAIN-SUFFIX,kwicdn.com,DIRECT
 DOMAIN-SUFFIX,kwimgs.com,DIRECT
 DOMAIN-SUFFIX,laiytech.com,DIRECT
 DOMAIN-SUFFIX,landingbj.com,DIRECT
