--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1218,6 +1218,7 @@ DOMAIN-SUFFIX,yunpei.com,DIRECT
 DOMAIN-SUFFIX,yunshi99.com,DIRECT
 DOMAIN-SUFFIX,yuntue.com,DIRECT
 DOMAIN-SUFFIX,yunxindns.com,DIRECT
+DOMAIN-SUFFIX,yunxinfw.com,DIRECT
 DOMAIN-SUFFIX,yunxiu.com,DIRECT
 DOMAIN-SUFFIX,yunyingpai.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
