--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -15,6 +15,16 @@ udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowrocket.conf
 
 [Rule]
+DOMAIN-SUFFIX,ads.inmobi.com,REJECT-DROP
+DOMAIN-SUFFIX,adsappier.com,REJECT-DROP
+DOMAIN-SUFFIX,amazon-adsystem.com,REJECT-DROP
+DOMAIN-SUFFIX,appier.net,REJECT-DROP
+DOMAIN-SUFFIX,appiersig.com,REJECT-DROP
+DOMAIN-SUFFIX,criteo.com,REJECT-DROP
+DOMAIN-SUFFIX,googleads.g.doubleclick.net,REJECT-DROP
+DOMAIN-SUFFIX,pubmatic.com,REJECT-DROP
+DOMAIN-SUFFIX,smaato.net,REJECT-DROP
+DOMAIN-SUFFIX,tappx.com,REJECT-DROP
 IP-CIDR,95.161.76.100/31,REJECT-NO-DROP,no-resolve
 IP-CIDR,24.199.123.28/32,PROXY,no-resolve
 IP-CIDR,45.76.214.191/32,PROXY,no-resolve
@@ -42,12 +52,7 @@ USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
-DOMAIN-KEYWORD,douyin,DIRECT
-DOMAIN-KEYWORD,kwai,DIRECT
-DOMAIN-KEYWORD,toutiao,DIRECT
-DOMAIN-KEYWORD,xigua,DIRECT
-DOMAIN-KEYWORD,snssdk.com,DIRECT
-DOMAIN-SUFFIX,0kkkkkt.com,DIRECT    
+DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -983,6 +988,7 @@ DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
 DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tencentcs.com,DIRECT
 DOMAIN-SUFFIX,tencentmusic.com,DIRECT
+DOMAIN-SUFFIX,tencenttds.com,DIRECT
 DOMAIN-SUFFIX,tengshiauto.com,DIRECT
 DOMAIN-SUFFIX,tenpay.com,DIRECT
 DOMAIN-SUFFIX,tfogc.com,DIRECT
