--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -524,6 +524,7 @@ DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,hellobixin.com,DIRECT
 DOMAIN-SUFFIX,hellorf.com,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
+DOMAIN-SUFFIX,hiaxure.com,DIRECT
 DOMAIN-SUFFIX,hibixin.com,DIRECT
 DOMAIN-SUFFIX,hicloud.com,DIRECT
 DOMAIN-SUFFIX,hiecheimaetu.com,DIRECT
