--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -42,6 +42,7 @@ USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
+DOMAIN-KEYWORD,snssdk.com,DIRECT
 DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
