--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -808,6 +808,7 @@ DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,oneplusbbs.com,DIRECT
 DOMAIN-SUFFIX,onethingpcs.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
+DOMAIN-SUFFIX,open-douyin.com,DIRECT
 DOMAIN-SUFFIX,openinstall.io,DIRECT
 DOMAIN-SUFFIX,oraev.com,DIRECT
 DOMAIN-SUFFIX,oschina.net,DIRECT
