--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1042,6 +1042,7 @@ DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,uyunad.com,DIRECT
 DOMAIN-SUFFIX,v-56.com,DIRECT
 DOMAIN-SUFFIX,variflight.com,DIRECT
+DOMAIN-SUFFIX,vedeng.com,DIRECT
 DOMAIN-SUFFIX,vegslb.com,DIRECT
 DOMAIN-SUFFIX,venucia.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
