--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -644,6 +644,7 @@ DOMAIN-SUFFIX,ke.com,DIRECT
 DOMAIN-SUFFIX,keepcdn.com,DIRECT
 DOMAIN-SUFFIX,kejet.net,DIRECT
 DOMAIN-SUFFIX,kekenet.com,DIRECT
+DOMAIN-SUFFIX,keruyun.com,DIRECT
 DOMAIN-SUFFIX,kf5.com,DIRECT
 DOMAIN-SUFFIX,kfzimg.com,DIRECT
 DOMAIN-SUFFIX,kgimg.com,DIRECT
@@ -907,6 +908,7 @@ DOMAIN-SUFFIX,sf-card.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
 DOMAIN-SUFFIX,shanrongmall.com,DIRECT
 DOMAIN-SUFFIX,shemen365.com,DIRECT
+DOMAIN-SUFFIX,shijicloud.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,shouqianba.com,DIRECT
 DOMAIN-SUFFIX,showstart.com,DIRECT
@@ -1166,6 +1168,7 @@ DOMAIN-SUFFIX,yangkeduo.com,DIRECT
 DOMAIN-SUFFIX,yangwangauto.com,DIRECT
 DOMAIN-SUFFIX,yaoguo.com,DIRECT
 DOMAIN-SUFFIX,yayapeiyin.com,DIRECT
+DOMAIN-SUFFIX,yazuo.com,DIRECT
 DOMAIN-SUFFIX,ybjk.com,DIRECT
 DOMAIN-SUFFIX,ybjx.net,DIRECT
 DOMAIN-SUFFIX,ybscjp.com,DIRECT
