--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -579,6 +579,7 @@ DOMAIN-SUFFIX,ip138.com,DIRECT
 DOMAIN-SUFFIX,ipinyou.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
 DOMAIN-SUFFIX,iplaysoft.com,DIRECT
+DOMAIN-SUFFIX,ipshu.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyipic.com,DIRECT
 DOMAIN-SUFFIX,irs01.com,DIRECT
