--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -369,6 +369,7 @@ DOMAIN-SUFFIX,dd-advisor.com,DIRECT
 DOMAIN-SUFFIX,decmose.top,DIRECT
 DOMAIN-SUFFIX,deppon.com,DIRECT
 DOMAIN-SUFFIX,dfcfw.com,DIRECT
+DOMAIN-SUFFIX,dian.so,DIRECT
 DOMAIN-SUFFIX,dianping.com,DIRECT
 DOMAIN-SUFFIX,didialift.com,DIRECT
 DOMAIN-SUFFIX,didiglobal.com,DIRECT
