--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1039,6 +1039,7 @@ DOMAIN-SUFFIX,umsns.com,DIRECT
 DOMAIN-SUFFIX,umtrack.com,DIRECT
 DOMAIN-SUFFIX,unicompayment.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
+DOMAIN-SUFFIX,upyun.com,DIRECT
 DOMAIN-SUFFIX,uri6.com,DIRECT
 DOMAIN-SUFFIX,uuchuzu.com,DIRECT
 DOMAIN-SUFFIX,uupt.com,DIRECT
