--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -269,6 +269,7 @@ DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
 DOMAIN-SUFFIX,bytegecko.com,DIRECT
 DOMAIN-SUFFIX,bytegeckoext.com,DIRECT
 DOMAIN-SUFFIX,bytegoofy.com,DIRECT
+DOMAIN-SUFFIX,bytehwm.com,DIRECT
 DOMAIN-SUFFIX,byteimg.com,DIRECT
 DOMAIN-SUFFIX,byteky.com,DIRECT
 DOMAIN-SUFFIX,bytemaimg.com,DIRECT
