--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2024-07-07 09:01:07
+ # Shadowrocket: 2024-07-07 09:01:07
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.0/8, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, asusrouter.com, router.asus.com
@@ -1122,6 +1122,7 @@ DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
 DOMAIN-SUFFIX,wtzw.com,DIRECT
 DOMAIN-SUFFIX,wuht.net,DIRECT
+DOMAIN-SUFFIX,wuuxiang.com,DIRECT
 DOMAIN-SUFFIX,wuyuidc.com,DIRECT
 DOMAIN-SUFFIX,wxgateway.com,DIRECT
 DOMAIN-SUFFIX,xaykt.com,DIRECT
