--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -788,6 +788,7 @@ DOMAIN-SUFFIX,mydrivers.com,DIRECT
 DOMAIN-SUFFIX,myhuaweicloud.com,DIRECT
 DOMAIN-SUFFIX,myqcloud.com,DIRECT
 DOMAIN-SUFFIX,myssl.com,DIRECT
+DOMAIN-SUFFIX,mywhh.com,DIRECT
 DOMAIN-SUFFIX,myzaker.com,DIRECT
 DOMAIN-SUFFIX,mzi8.com,DIRECT
 DOMAIN-SUFFIX,ndcimgs.com,DIRECT
@@ -1233,6 +1234,7 @@ DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
 DOMAIN-SUFFIX,zhisanzhao.com,DIRECT
+DOMAIN-SUFFIX,zhisheng.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
 DOMAIN-SUFFIX,zhongche.com,DIRECT
 DOMAIN-SUFFIX,zhtzc.com,DIRECT
