--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -20,6 +20,8 @@ DOMAIN-SUFFIX,bing.com.cn,PROXY
 DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
 DOMAIN-SUFFIX,microsoft.com.cn,PROXY
 DOMAIN-SUFFIX,msn.cn,PROXY
+DOMAIN-SUFFIX,googleapis.cn,PROXY
+DOMAIN-SUFFIX,gstatic.com,PROXY
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
