--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -26,8 +26,10 @@ USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
+DOMAIN,router.asus.com,DIRECT
 DOMAIN-KEYWORD,snssdk.com,DIRECT
 DOMAIN-SUFFIX,188188.org,DIRECT
+DOMAIN-SUFFIX,asusrouter.com,DIRECT
 DOMAIN-SUFFIX,chinasolargard.com,DIRECT
 DOMAIN-SUFFIX,chongbuluo.com,DIRECT
 DOMAIN-SUFFIX,etrack06.com,DIRECT
